--- a/hackathon.html
+++ b/hackathon.html
@@ -14,4 +14,4 @@ permalink: /hackathon/
  
  {% include hackathon-location.html %} -->
  
- {% include partners.html %}
+<!--  {% include partners.html %} -->
