--- a/hackathon.html
+++ b/hackathon.html
@@ -8,10 +8,10 @@ permalink: /hackathon/
 
 <!--  {% include about-hackathon.html %} -->
 
-<!--  {% include judges.html %}
+<!--  {% include judges.html %} -->
 
- {% include prizes.html %}
+<!-- {% include prizes.html %} -->
  
- {% include hackathon-location.html %} -->
+<!-- {% include hackathon-location.html %} -->
  
 <!--  {% include partners.html %} -->
