Comment out certain blocks in the main page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ permalink: /
 
  {% include about.html %}
 
+ {% comment %}
  {% include statistic.html %}
 
  {% include latest-news.html %}
@@ -26,3 +27,4 @@ permalink: /
  {% include tickets.html %}
 
  {% include tickets-2.html %}
+ {% endcomment %}
