edit about and update config

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@ permalink: /
 
  {% include hero.html %}
 
+ {% comment %}
  {% include about.html %}
+ {% endcomment %}
 
  {% include about_2.html %}
 
+ {% comment %}
  {% include rockstar-speakers.html %}
+ {% endcomment %}
 
  {% comment %}
  {% include statistic.html %}
